# rust-api

./: Cargo.toml
.sqlx/: query-32d8113426250e828597f01ceadfd06f43b6129a9738fcb9e44dd82cdbe52d25.json  query-5a5c18f1266396150175a9c8b591048cb1e1c52e1ff45c4d01e4ea9e3dfa180e.json  query-7567f94792eaa76536323d67e0d89ef9266748293219b873aa2c065b24eb5b20.json  query-78fda5483fe88b5b32c2d58b96b16a2d47fd5a0c7cdeea112159da342eb97261.json  query-b0a2f84327185a6a7b9369da17b41df05d7e3799af11692ecd49249a4f2475a1.json  query-ce9d2eedc41c18efe54551b6f88c3a5bb331148c65d26fbcf2c0946965eaee71.json  query-e6061198ce36d4f7d15ce3786959515e28c4a03dec3dd2d20b3b6d5100c7068b.json
migrations/: 20260201110538_create_db.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/models/: task.rs
src/routes/: health_check.rs
src/routes/tasks/: create_task.rs  delete_task.rs  get_all_tasks.rs  get_task_by_id.rs  mod.rs  update_task.rs
src/utils/: custom_response.rs  mod.rs
